--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   --violet:#b266ff; --violet2:#e0b3ff; --card:rgba(255,255,255,.06);
   --border:rgba(178,102,255,.25);
 }
-*{box-sizing:border-box}
-html,body{margin:0;background:var(--bg);color:var(--txt);font-family:Poppins,system-ui,Segoe UI,Roboto,Arial,sans-serif}
+*{box-sizing:border-box} html,body{margin:0;background:var(--bg);color:var(--txt);font-family:Poppins,system-ui,Segoe UI,Roboto,Arial,sans-serif}
 a{text-decoration:none;color:var(--violet)}
 img{max-width:100%;display:block}
 
@@ -24,130 +23,135 @@ img{max-width:100%;display:block}
 .section{padding:56px 0}
 
 /* HERO */
-.hero{
-  padding:86px 0 48px;
-  background: radial-gradient(70% 60% at 50% 0%, rgba(178,102,255,.22), rgba(0,0,0,0) 60%), #000;
-  text-align:center;
-}
+.hero{padding:86px 0 48px;background: radial-gradient(70% 60% at 50% 0%, rgba(178,102,255,.22), rgba(0,0,0,0) 60%), #000; text-align:center}
+.brand{font-size:3.2rem;letter-spacing:.06em;font-weight:800;color:#fff;margin:0 0 16px;
+  text-shadow:0 0 18px rgba(255,255,255,.7),0 0 40px rgba(178,102,255,.55)}
+.brand span{color:var(--violet);text-shadow:0 0 20px var(--violet),0 0 50px var(--violet2)}
+.hero .lead,.hero .sub{max-width:760px;margin:0 auto 10px;line-height:1.6;color:#efefef;text-shadow:0 0 6px rgba(255,255,255,.18)}
+/* nessuna animazione sulla descrizione */
 
-/* --- ANIMAZIONE POTENTE E RESPONSIVE PER "ShowBizOne" --- */
-.brand {
-  position: relative;
-  display: inline-block;
-  font-size: 2.8rem; /* mobile */
-  letter-spacing: 0.08em;
-  font-weight: 800;
-  color: #fff;
-  text-shadow:
-    0 0 15px rgba(255,255,255,0.6),
-    0 0 35px rgba(178,102,255,0.5),
-    0 0 65px rgba(178,102,255,0.4);
-  opacity: 0;
-  transform: scale(0.85) translateY(40px);
-  animation:
-    titleEntrance 1.2s ease-out forwards,
-    titlePulse 3s ease-in-out 1.2s infinite alternate;
-  margin-bottom: 20px;
-  line-height: 1.1;
-}
-
-.brand span {
-  color: #b266ff;
-  text-shadow:
-    0 0 30px #b266ff,
-    0 0 60px #e0b3ff,
-    0 0 100px rgba(255,255,255,0.9);
-  animation: oneFlash 2.8s ease-in-out 1.4s infinite alternate;
-}
-
-.brand::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -120%;
-  width: 50%;
-  height: 100%;
-  background: linear-gradient(120deg, transparent, rgba(255,255,255,0.8), transparent);
-  animation: shineSweep 4s ease-in-out 2s infinite;
-}
-
-@keyframes titleEntrance {
-  0% { opacity: 0; transform: scale(0.8) translateY(40px); text-shadow: none; }
-  70% { opacity: 1; transform: scale(1.05) translateY(0); }
-  100% { opacity: 1; transform: scale(1); }
-}
-
-@keyframes titlePulse {
-  0% {
-    text-shadow:
-      0 0 20px rgba(255,255,255,0.8),
-      0 0 40px rgba(178,102,255,0.5);
-  }
-  100% {
-    text-shadow:
-      0 0 35px rgba(255,255,255,1),
-      0 0 80px rgba(178,102,255,0.8);
-  }
-}
-
-@keyframes oneFlash {
-  0% { text-shadow:0 0 15px #b266ff,0 0 30px #e0b3ff; }
-  100% { text-shadow:0 0 40px #b266ff,0 0 90px #e0b3ff,0 0 160px #fff; }
-}
-
-@keyframes shineSweep {
-  0% { left:-120%; }
-  50% { left:130%; }
-  100% { left:130%; }
-}
-
-/* Responsive */
-@media (min-width:768px){ .brand{font-size:3.4rem;} }
-@media (min-width:1100px){ .brand{font-size:3.8rem;} }
-
-/* HERO text */
-.hero p{font-size:1.05rem;line-height:1.6;color:#f0f0f0;max-width:760px;margin:0 auto 15px;text-shadow:0 0 8px rgba(255,255,255,0.2)}
-.hero p strong{color:#b266ff;text-shadow:0 0 12px #b266ff}
-
-/* EFFETTI SPECIALI */
+/* EFFETTI SPECIALI full-width con testo sopra */
 .fx-section{position:relative;margin:0}
 .fx-image{position:relative;overflow:hidden}
 .fx-image img{width:100%;height:auto;object-fit:cover;filter:brightness(.45)}
 .fx-text{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);text-align:center;width:92%;max-width:900px;color:#fff}
-.fx-text h2{font-size:1.7rem;margin:0 0 10px;text-transform:uppercase;font-weight:800;text-shadow:0 0 14px var(--violet),0 0 28px var(--violet2)}
+.fx-text h2{font-size:1.7rem;margin:0 0 10px;text-transform:uppercase;font-weight:800;
+  text-shadow:0 0 14px var(--violet),0 0 28px var(--violet2)}
 .fx-text p{margin:0;font-size:1rem;line-height:1.6;text-shadow:0 0 8px rgba(255,255,255,.75)}
 
-/* SHOWS */
+/* DINNER & CIRCUS (affiancati, responsive) */
 .shows{display:flex;gap:20px;flex-wrap:wrap;justify-content:center;padding:42px 18px}
-.show-card{position:relative;flex:1 1 360px;max-width:520px;border-radius:16px;overflow:hidden;background:var(--card);border:1px solid var(--border);box-shadow:0 10px 28px rgba(0,0,0,.35)}
+.show-card{position:relative;flex:1 1 360px;max-width:520px;border-radius:16px;overflow:hidden;
+  background:var(--card);border:1px solid var(--border);box-shadow:0 10px 28px rgba(0,0,0,.35)}
 .show-card img{width:100%;height:420px;object-fit:cover;filter:brightness(.5)}
-.show-overlay{position:absolute;inset:auto 0 0 0;padding:20px;background:linear-gradient(180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,.65) 40%,rgba(0,0,0,.85) 100%);text-align:center}
-.show-overlay h2{margin:0 0 8px;font-size:1.4rem;text-transform:uppercase;color:#fff;text-shadow:0 0 12px var(--violet),0 0 24px var(--violet2)}
+.show-overlay{position:absolute;inset:auto 0 0 0;padding:20px;background:linear-gradient(180deg,rgba(0,0,0,0) 0%, rgba(0,0,0,.65) 40%, rgba(0,0,0,.85) 100%);text-align:center}
+.show-overlay h2{margin:0 0 8px;font-size:1.4rem;text-transform:uppercase;color:#fff;
+  text-shadow:0 0 12px var(--violet),0 0 24px var(--violet2)}
 .show-overlay p{margin:0;color:#eee;line-height:1.55}
+
+/* SERVICE */
+#service h2{color:var(--violet);font-size:1.6rem;margin:0 0 14px}
+.grid-3{display:grid;gap:16px}
+.card{background:var(--card);border:1px solid var(--border);border-radius:14px;padding:20px;text-align:center}
+.card h3{margin:0 0 8px}
+.card p{color:var(--muted)}
 
 /* CTA */
 .cta-container{text-align:center;margin:60px 0}
 .cta-text{color:#fff;font-size:1.2rem;margin:0 0 18px}
 .cta-text strong{display:block;font-size:2.2rem;font-weight:800;color:var(--violet);letter-spacing:2px;text-shadow:0 0 20px var(--violet),0 0 40px var(--violet2)}
-.cta-button{display:inline-block;background:linear-gradient(90deg,var(--violet),var(--violet2));color:#fff;padding:14px 28px;border-radius:50px;font-weight:700;text-transform:uppercase;letter-spacing:1px;box-shadow:0 0 18px rgba(255,255,255,.25);animation:pulseGlow 2.5s ease-in-out infinite}
-@keyframes pulseGlow{0%{box-shadow:0 0 10px var(--violet),0 0 20px var(--violet2)}50%{box-shadow:0 0 25px var(--violet2),0 0 50px var(--violet);transform:scale(1.03)}100%{box-shadow:0 0 10px var(--violet),0 0 20px var(--violet2)}}
+.cta-button{display:inline-block;background:linear-gradient(90deg,var(--violet),var(--violet2));color:#fff;padding:14px 28px;border-radius:50px;font-weight:700;text-transform:uppercase;letter-spacing:1px;box-shadow:0 0 18px rgba(255,255,255,.25)}
+.cta-button:hover{transform:scale(1.05)}
 
 /* FOOTER */
 .footer{background:#070707;border-top:1px solid rgba(255,255,255,.08);text-align:center;padding:38px 0}
-.footer a{color:var(--violet)}
-.copy{color:#9c9c9c;font-size:.9rem;margin-top:6px}
+.footer a{color:var(--violet)} .copy{color:#9c9c9c;font-size:.9rem;margin-top:6px}
+
+/* Desktop */
+@media (min-width:900px){
+  .brand{font-size:3.6rem}
+  .fx-text h2{font-size:2rem}
+  .grid-3{grid-template-columns:repeat(3,1fr)}
+}
+  @keyframes pulseGlow {
+  0% { box-shadow: 0 0 10px var(--violet), 0 0 20px var(--violet2); }
+  50% { box-shadow: 0 0 25px var(--violet2), 0 0 50px var(--violet); transform: scale(1.03); }
+  100% { box-shadow: 0 0 10px var(--violet), 0 0 20px var(--violet2); }
+}
+.cta-button {
+  animation: pulseGlow 2.5s ease-in-out infinite;
+}
+  /* --- Scritta "Entertainment" con effetto neon realistico --- */
+.entertainment {
+  display: inline-block;
+  position: relative;
+  font-size: 0.75rem; /* più piccola e proporzionata */
+  font-weight: 600;
+  color: #b266ff;
+  letter-spacing: 0.38em;
+  text-transform: uppercase;
+  margin: 4px 0 14px 0;
+  text-shadow:
+    0 0 6px #b266ff,
+    0 0 15px #d6a3ff,
+    0 0 25px rgba(255,255,255,0.7);
+  animation: neonFlicker 3s infinite;
+}
+
+/* Barra neon sotto la scritta */
+.entertainment::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  margin-top: 4px;
+  background: linear-gradient(90deg, transparent, #b266ff, transparent);
+  border-radius: 2px;
+  box-shadow:
+    0 0 10px #b266ff,
+    0 0 20px #e0b3ff,
+    0 0 40px rgba(255,255,255,0.8);
+  animation: neonBarFlicker 3s infinite;
+}
+
+@keyframes neonFlicker {
+  0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+    opacity: 1;
+    text-shadow:
+      0 0 6px #b266ff,
+      0 0 15px #d6a3ff,
+      0 0 25px rgba(255,255,255,0.7),
+      0 0 40px #b266ff;
+  }
+  20%, 24%, 55% {
+    opacity: 0.6;
+    text-shadow:
+      0 0 3px #b266ff,
+      0 0 10px #d6a3ff;
+  }
+}
+
+@keyframes neonBarFlicker {
+  0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+    opacity: 1;
+    box-shadow:
+      0 0 10px #b266ff,
+      0 0 25px #e0b3ff,
+      0 0 40px #fff;
+  }
+  20%, 24%, 55% {
+    opacity: 0.4;
+    box-shadow:
+      0 0 5px #b266ff,
+      0 0 10px #d6a3ff;
+  }
+}
 </style>
 </head>
-
-<body>
+<!-- HERO -->
 <header class="hero">
   <div class="wrap">
     <p>
-      <strong>Arte</strong>, <strong>musica</strong>, <strong>performance</strong>,
-      <strong>tecnologia</strong> e <strong>intrattenimento</strong> si fondono per dare vita
-      a esperienze spettacolari e coinvolgenti.
-    </p>
-
     <h1 class="brand">ShowBiz<span>One</span></h1>
 
     <p class="lead">
@@ -161,3 +165,73 @@ img{max-width:100%;display:block}
     </p>
   </div>
 </header>
+<!-- EFFETTI SPECIALI -->
+<section class="fx-section" id="fx">
+  <div class="fx-image">
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/IMG_20251030_235605.jpg" alt="ShowBiz One - Effetti speciali con fiamme e laser">
+    <div class="fx-text">
+      <h2>EFFETTI SPECIALI</h2>
+      <p>Diamo potenza e adrenalina ai tuoi eventi con effetti speciali professionali: CO₂, fiamme, coriandoli, pyro indoor, geyser e special FX per show ad alto impatto.</p>
+    </div>
+  </div>
+</section>
+
+<!-- DINNER & CIRCUS SHOW (affiancati) -->
+<section class="shows" id="shows">
+  <div class="show-card" id="dinnerCard">
+  <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/dinner-show-spettacolo%20(1).jpg" 
+       alt="Dinner Show — spettacolo con ballerini, performer e luci sceniche durante la cena">
+  <div class="show-overlay">
+    <h2>Dinner Show</h2>
+    <p>Spettacoli eleganti con musica dal vivo e coreografie d’effetto. Un mix di eleganza, tecnologia e arte per rendere unica ogni serata.</p>
+  </div>
+</div>
+
+  <div class="show-card">
+    <!-- Sostituisci il nome se diverso nel repo -->
+    <img src="https://raw.githubusercontent.com/Kikkodancer/ShowBizOne-/refs/heads/main/gettyimages-471730013-612x612.jpg">
+    <div class="show-overlay">
+      <h2>Circus Show</h2>
+      <p>Acrobazie, fuoco e illusioni visive per un intrattenimento spettacolare. ShowBizOne porta sul palco energia, eleganza e creatività senza limiti.</p>
+    </div>
+  </div>
+</section>
+
+<!-- SERVICE AUDIO/LUCI/VIDEO -->
+<section class="section" id="service">
+  <div class="wrap">
+    <div class="grid-3">
+      <article class="card">
+        <h3>Audio Professionale</h3>
+        <p>Impianti audio di alta qualità per eventi, concerti e spettacoli live.</p>
+      </article>
+      <article class="card">
+        <h3>Luci e Scenografie</h3>
+        <p>Illuminazione dinamica e scenografie luminose per creare atmosfere uniche.</p>
+      </article>
+      <article class="card">
+        <h3>Video e Proiezioni</h3>
+        <p>Schermi LED e proiezioni per eventi indoor e outdoor.</p>
+      </article>
+    </div>
+  </div>
+</section>
+
+<!-- CTA -->
+<div class="cta-container">
+  <p class="cta-text">Prenota ora il tuo evento con <strong>ShowBizOne</strong></p>
+  <a href="https://wa.me/393792603685" target="_blank" class="cta-button">🎭 Richiedi il tuo spettacolo</a>
+</div>
+
+<!-- FOOTER -->
+<footer class="footer">
+  <div class="wrap">
+    <h3>Contatti</h3>
+    <p>📞 <a href="https://wa.me/393792603685" target="_blank">+39 379 260 3685</a></p>
+    <p>📧 <a href="mailto:info@showbizone.it">info@showbizone.it</a></p>
+    <p class="copy">© 2025 ShowBiz One — Tutti i diritti riservati</p>
+  </div>
+</footer>
+
+</body>
+</html>
